# WeatherCli

./: CMakeLists.txt  Cmanager.c  Cmanager.h  locationdetection.c  locationdetection.h  main  main.c
